# kelly-kalendar

./: .gitignore  NANOCLAW.md  README.md  SECURITY-REVIEW.md  THREAT-MODEL.md  pyproject.toml  serve_http.py
kelly/: __init__.py  caldav.py  cli.py  credentials.py  server.py
tests/: test_caldav.py  test_credentials.py  test_server.py
